--- a/vignettes/PCAtools.Rmd
+++ b/vignettes/PCAtools.Rmd
@@ -58,10 +58,97 @@ Note: to install development version direct from GitHub:
 
 ```
 
-# Quick start
+# Quick start: *DESeq2*
 
-For this vignette, we will load breast cancer gene expression data with
-recurrence free survival (RFS) from
+For this example, we will follow the tutorial (from Section 3.1) of [RNA-seq workflow: gene-level
+exploratory analysis and differential expression](http://master.bioconductor.org/packages/release/workflows/vignettes/rnaseqGene/inst/doc/rnaseqGene.html). Specifically, we will load the 'airway' data, where different airway smooth muscle cells were treated with dexamethasone.
+
+```{r message = FALSE}
+
+  library(airway)
+  library(magrittr)
+
+  data('airway')
+  airway$dex %<>% relevel('untrt')
+
+```
+
+Annotate the Ensembl gene IDs to gene symbols:
+
+```{r message = FALSE}
+
+  ens <- rownames(airway)
+
+  library(org.Hs.eg.db)
+  symbols <- mapIds(org.Hs.eg.db, keys = ens,
+    column = c('SYMBOL'), keytype = 'ENSEMBL')
+  symbols <- symbols[!is.na(symbols)]
+  symbols <- symbols[match(rownames(airway), names(symbols))]
+  rownames(airway) <- symbols
+  keep <- !is.na(rownames(airway))
+  airway <- airway[keep,]
+
+```
+
+Normalise the data and transform the normalised counts to variance-stabilised expression levels:
+
+```{r message = FALSE, warning = FALSE}
+
+  library('DESeq2')
+
+  dds <- DESeqDataSet(airway, design = ~ cell + dex)
+  dds <- DESeq(dds)
+  vst <- assay(vst(dds))
+
+```
+
+## Conduct principal component analysis (PCA):
+
+```{r}
+
+  p <- pca(vst, metadata = colData(airway), removeVar = 0.1)
+
+```
+
+## A scree plot
+
+```{r ex1, warning = FALSE, fig.height = 7, fig.width = 6, fig.cap = 'Figure 1: A scree plot'}
+
+  screeplot(p, axisLabSize = 18, titleLabSize = 22)
+
+```
+
+## A bi-plot
+
+Different interpretations of the biplot exist. In the OMICs era, for most
+general users, a biplot is a simple representation of samples in a
+2-dimensional space, usually focusing on just the first two PCs:
+
+```{r ex2a, eval = FALSE}
+
+  biplot(p)
+
+```
+
+However, the original definition of a biplot by Gabriel KR [@Gabriel] is a
+plot that plots both variables and observatinos (samples) in the same space.
+The variables are indicated by arrows drawn from the origin, which indicate
+their 'weight' in different directions. We touch on this later via the
+*plotLoadings* function.
+
+```{r ex2b, fig.height = 7, fig.width = 7, fig.cap = 'Figure 2b: A bi-plot'}
+
+  biplot(p, showLoadings = TRUE,
+    labSize = 5, pointSize = 5, sizeLoadingsNames = 5)
+
+```
+
+
+
+# Quick start: Gene Expression Omnibus (GEO)
+
+Here, we will instead start with data from [Gene Expression Omnibus](https://www.ncbi.nlm.nih.gov/geo/).
+We will load breast cancer gene expression data with recurrence free survival (RFS) from
 [Gene Expression Profiling in Breast Cancer: Understanding the Molecular Basis of Histologic Grade To Improve Prognosis](https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE2990).
 
 First, let's read in and prepare the data:
@@ -127,33 +214,16 @@ Conduct principal component analysis (PCA):
 
 ```
 
-## A scree plot
-
-```{r ex1, warning = FALSE, fig.height = 7, fig.width = 20, fig.cap = 'Figure 1: A scree plot'}
-
-  screeplot(p, axisLabSize = 18, titleLabSize = 22)
-
-```
-
 ## A bi-plot
 
-Different interpretations of the biplot exist. In the OMICs era, for most
-general users, a biplot is a simple representation of samples in a
-2-dimensional space, usually focusing on just the first two PCs:
 
-```{r ex2a, eval = FALSE}
+```{r ex3a, eval = FALSE}
 
   biplot(p)
 
 ```
 
-However, the original definition of a biplot by Gabriel KR [@Gabriel] is a
-plot that plots both variables and observatinos (samples) in the same space.
-The variables are indicated by arrows drawn from the origin, which indicate
-their 'weight' in different directions. We touch on this later via the
-*plotLoadings* function.
-
-```{r ex2b, fig.height = 6, fig.width = 7, fig.cap = 'Figure 2b: A bi-plot'}
+```{r ex3b, fig.height = 6, fig.width = 7, fig.cap = 'Figure 2b: A bi-plot'}
 
   biplot(p, showLoadings = TRUE, lab = NULL)
 
@@ -169,7 +239,7 @@ More on this later in this vignette.
 
 ## A pairs plot
 
-```{r ex3, message = FALSE, fig.height = 10, fig.width = 10, fig.cap = 'Figure 3: A pairs plot'}
+```{r ex4, message = FALSE, fig.height = 10, fig.width = 10, fig.cap = 'Figure 3: A pairs plot'}
 
   pairsplot(p)
 
@@ -181,7 +251,7 @@ If the biplot was previously generated with *showLoadings = TRUE*, check how
 this loadings plot corresponds to the biplot loadings - they should match up
 for the top hits.
 
-```{r ex4, fig.height = 6, fig.width = 8, fig.cap = 'Figure 4: A loadings plot'}
+```{r ex5, fig.height = 6, fig.width = 8, fig.cap = 'Figure 4: A loadings plot'}
 
   plotloadings(p, labSize = 3)
 
@@ -190,7 +260,7 @@ for the top hits.
 
 ## An eigencor plot
 
-```{r ex5, warning = FALSE, fig.height = 4, fig.width = 8, fig.cap = 'Figure 5: An eigencor plot'}
+```{r ex6, warning = FALSE, fig.height = 4, fig.width = 8, fig.cap = 'Figure 5: An eigencor plot'}
 
   eigencorplot(p,
     metavars = c('Study','Age','Distant.RFS','ER',
@@ -275,7 +345,7 @@ number of clusters in a dataset - there is no correct answer.
 
 Taking these values, we can produce a new scree plot and mark these:
 
-```{r ex6, fig.height = 7, fig.width = 9, fig.cap = 'Figure 6: Advanced scree plot illustrating optimum number of PCs'}
+```{r ex7, fig.height = 7, fig.width = 9, fig.cap = 'Figure 6: Advanced scree plot illustrating optimum number of PCs'}
 
   library(ggplot2)
 
@@ -312,7 +382,7 @@ In a bi-plot, we can shade the points by different groups and add many more feat
 
 ### Colour by a metadata factor, use a custom label, add lines through origin, and add legend
 
-```{r ex7, fig.height = 7, fig.width = 7.5, fig.cap = 'Figure 7: Colour by a metadata factor, use a custom label, add lines through origin, and add legend'}
+```{r ex8, fig.height = 7, fig.width = 7.5, fig.cap = 'Figure 7: Colour by a metadata factor, use a custom label, add lines through origin, and add legend'}
 
   biplot(p,
     lab = paste0(p$metadata$Age, ' años'),
@@ -329,7 +399,7 @@ The encircle functionality literally draws a polygon around
 each group specified by *colby*. It says nothing about any statistic
 pertaining to each group.
 
-```{r ex8, message = FALSE, fig.height = 7.5, fig.width = 7, fig.cap = 'Figure 8: Supply custom colours and encircle variables by group'}
+```{r ex9, message = FALSE, fig.height = 7.5, fig.width = 7, fig.cap = 'Figure 8: Supply custom colours and encircle variables by group'}
 
   biplot(p,
     colby = 'ER', colkey = c('ER+' = 'forestgreen', 'ER-' = 'purple'),
@@ -358,7 +428,7 @@ Stat ellipses are also drawn around each group but have a greater statistical
 meaning and can be used, for example, as a strict determination of outlier
 samples. Here, we draw ellipses around each group at the 95% confidence level:
 
-```{r ex9, message = FALSE, fig.height = 7.5, fig.width = 7, fig.cap = 'Figure 9: Stat ellipses'}
+```{r ex10, message = FALSE, fig.height = 7.5, fig.width = 7, fig.cap = 'Figure 9: Stat ellipses'}
 
   biplot(p,
     colby = 'ER', colkey = c('ER+' = 'forestgreen', 'ER-' = 'purple'),
@@ -390,7 +460,7 @@ samples. Here, we draw ellipses around each group at the 95% confidence level:
 
 ### Change shape based on tumour grade, remove connectors, and add titles
 
-```{r ex10, message = FALSE, eval = FALSE}
+```{r ex11, message = FALSE, eval = FALSE}
 
   biplot(p,
     colby = 'ER', colkey = c('ER+' = 'forestgreen', 'ER-' = 'purple'),
@@ -406,7 +476,7 @@ samples. Here, we draw ellipses around each group at the 95% confidence level:
 
 ### Modify line types, remove gridlines, and increase point size
 
-```{r ex11a, eval = FALSE}
+```{r ex12a, eval = FALSE}
 
   biplot(p,
     lab = NULL,
@@ -426,7 +496,7 @@ samples. Here, we draw ellipses around each group at the 95% confidence level:
 
 Let's plot the same as above but with loadings:
 
-```{r ex11b, message = FALSE, fig.height = 5.5, fig.width = 11, fig.cap = 'Figure 11b: Modify line types, remove gridlines, and increase point size'}
+```{r ex12b, message = FALSE, fig.height = 5.5, fig.width = 11, fig.cap = 'Figure 11b: Modify line types, remove gridlines, and increase point size'}
 
   biplot(p,
     # loadings parameters
@@ -455,7 +525,7 @@ Let's plot the same as above but with loadings:
 There are two ways to colour by a continuous variable. In the first way, we simply
 'add on' a continuous colour scale via *scale_colour_gradient*:
 
-```{r ex12a, fig.height = 5.5, fig.width = 6, fig.cap = 'Figure 12a: Colour by a continuous variable and plot other PCs'}
+```{r ex13a, fig.height = 5.5, fig.width = 6, fig.cap = 'Figure 12a: Colour by a continuous variable and plot other PCs'}
 
   # add ESR1 gene expression to the metadata
   p$metadata$ESR1 <- mat['205225_at',]
@@ -475,7 +545,7 @@ There are two ways to colour by a continuous variable. In the first way, we simp
 We can also just permit that the internal *ggplot2* engine picks the colour
 scheme - here, we also plot PC10 versus PC50:
 
-```{r ex12b, eval = FALSE}
+```{r ex13b, eval = FALSE}
 
   biplot(p, x = 'PC10', y = 'PC50',
     lab = NULL,
@@ -505,7 +575,7 @@ can shut off titles and axis labeling to save space. Reducing point size and
 colouring by a variable of interest can additionally help us to rapidly skim
 over the data.
 
-```{r ex13, message = FALSE, fig.height = 8, fig.width = 7, fig.cap = 'Figure 13: Quickly explore potentially informative PCs via a pairs plot'}
+```{r ex14, message = FALSE, fig.height = 8, fig.width = 7, fig.cap = 'Figure 13: Quickly explore potentially informative PCs via a pairs plot'}
 
   pairsplot(p,
     components = getComponents(p, c(1:10)),
@@ -524,7 +594,7 @@ setting 'triangle = FALSE'. In this case, we can further control the layout
 with the 'ncol' and 'nrow' parameters, although, the function will
 automatically determine these based on your input data.
 
-```{r ex14, fig.height = 5.5, fig.width = 6, fig.cap = 'Figure 14: arranging a pairs plot horizontally'}
+```{r ex15, fig.height = 5.5, fig.width = 6, fig.cap = 'Figure 14: arranging a pairs plot horizontally'}
 
   pairsplot(p,
     components = getComponents(p, c(4,33,11,1)),
@@ -553,7 +623,7 @@ The loadings plot, like all others, is highly configurable. To modify the
 cut-off for inclusion / exclusion of variables, we use *rangeRetain*, where
 0.01 equates to the top/bottom 1% of the loadings range per PC.
 
-```{r ex15, fig.height = 5.5, fig.width = 7, fig.cap = 'Figure 15: Determine the variables that drive variation among each PC'}
+```{r ex16, fig.height = 5.5, fig.width = 7, fig.cap = 'Figure 15: Determine the variables that drive variation among each PC'}
 
   plotloadings(p,
     rangeRetain = 0.01,
@@ -577,7 +647,7 @@ With the loadings plot, in addition, we can instead plot absolute values and
 modify the point sizes to be proportional to the loadings. We can also switch
 off the line connectors and plot the loadings for any PCs
 
-```{r ex16, fig.height = 7, fig.width = 9, fig.cap = 'Figure 16: plotting absolute component loadings'}
+```{r ex17, fig.height = 7, fig.width = 9, fig.cap = 'Figure 16: plotting absolute component loadings'}
 
   plotloadings(p,
     components = getComponents(p, c(4,33,11,1)),
@@ -607,7 +677,7 @@ correlations.
 [CorLevelPlot](https://github.com/kevinblighe/CorLevelPlot). Further examples
 can be found there.
 
-```{r ex17a, warning = FALSE, fig.height = 4.25, fig.width = 12, fig.cap = 'Figure 17a: Correlate the principal components back to the clinical data'}
+```{r ex18a, warning = FALSE, fig.height = 4.25, fig.width = 12, fig.cap = 'Figure 17a: Correlate the principal components back to the clinical data'}
 
   eigencorplot(p,
     components = getComponents(p, 1:27),
@@ -631,7 +701,7 @@ can be found there.
 We can also supply different cut-offs for statistical significance, apply
 p-value adjustment, plot R-squared values, and specify correlation method:
 
-```{r ex17b, warning = FALSE, fig.height = 5, fig.width = 12, fig.cap = 'Figure 17b: Correlate the principal components back to the clinical data'}
+```{r ex18b, warning = FALSE, fig.height = 5, fig.width = 12, fig.cap = 'Figure 17b: Correlate the principal components back to the clinical data'}
 
   eigencorplot(p,
     components = getComponents(p, 1:horn$n),
@@ -665,7 +735,7 @@ just a bi-plot used to identify outliers!
 
 ## Plot the entire project on a single panel
 
-```{r ex18, message = FALSE, warning = FALSE, fig.height = 10, fig.width = 15, fig.cap = 'Figure 18: a merged panel of all PCAtools plots'}
+```{r ex19, message = FALSE, warning = FALSE, fig.height = 10, fig.width = 15, fig.cap = 'Figure 18: a merged panel of all PCAtools plots'}
 
   pscree <- screeplot(p, components = getComponents(p, 1:30),
     hline = 80, vline = 27, axisLabSize = 14, titleLabSize = 20,
