--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,4 +1,10 @@
 
+CHANGES IN VERSION 2.6.0
+------------------------
+ - added max.overlaps and min.segment.length to provide further control over
+   connectors. max.overlaps replaces maxoverlapsConnectors, but both can still
+   be used for legacy purposes
+
 CHANGES IN VERSION 2.4.0
 ------------------------
  - added DESeq2 section to vignette intro
